tests/semantic/pass/goto_scope2.c
int main(void) {
  foo: return 0;
  goto foo;
}

int foo(void) {
  foo: return 0;
  goto foo;
}
