tests/semantic/fail/parameter_name_ommited.c
int foo(int ) {return 0;}

int main(void) {
   return foo(0);
}
